# xerophyta_data_app

./: .gitattributes  .gitignore  2025-08-29_remove_outdated_genes.ipynb  GENE_DELETION_USAGE.md  README.md  SQLALCHEMY_CHEATSHEET.md  accession_mapper.py  accession_mapping.csv  alembic.ini  all_xerophyta_species_db.sqlite  app.py  constants.py  data_tidier.py  db.py  db_manager.py  expression_page.py  gene_query_page.py  home.py  models.py  plots.py  pyproject.toml  requirements.txt  test_gene_deletion.py  test_page.py  workflow_notes.ipynb  xerophyta_db.sqlite
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 2be50a4486db_dropping_unnecessary_tables.py  3315ec7abbf1_remove_unused_columns.py  3805dd78c874_add_uniprot_and_at_gene_locus_id.py  aeea982a9429_view_current_schema.py  b70c2fa95df1_add_columns_to_gene_info.py  c51aa94055dd_move_at_genes_to_own_table.py  (+2 more)
data/: Absiscic_acid_uniprot.txt  All_genes_with_earliest_onset_of_DE_with_direction.csv  Gene_clusters_with_annotation_updated.csv  Xelegans_Arabidopsis_abscisic_annotation.csv  Xelegans_GO_absciscic acid transcripts.fasta  Xelegans_GeneID_Absiscic_acid_to_Uniprot  Xelegans_GeneID_absisic_acid  Xelegans_topBlasthit_abscisic_annotation.csv
database/: db.py  db_manager.py  models.py
notebooks/: 2025-08-29_remove_outdated_genes.ipynb
server/: app.py  expression_page.py  gene_query_page.py  grn_explorer.py  home.py
tests/: conftest.py  test_database.py  test_helper_functions.py  test_integration.py  test_models.py
utils/: constants.py  data_tidier.py  helper_functions.py  plots.py
(+8 files in other folders)
