[project]
name = "xerophyta-data-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "biopython>=1.85",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
